Fix strikethrough on Safari (#1327)

--- a/src/app/phase-bug-trimming/issues-deleted/issues-deleted.component.css
+++ b/src/app/phase-bug-trimming/issues-deleted/issues-deleted.component.css
@@ -1,5 +1,3 @@
-::ng-deep .text-strike-through > mat-table {
-  mat-row {
-    text-decoration: line-through;
-  }
+::ng-deep .text-strike-through > mat-table > mat-row {
+  text-decoration: line-through;
 }
